--- a/index.html
+++ b/index.html
@@ -219,7 +219,34 @@
         <div class="clearfix"></div>
     </div>
     <!-- End Testimonials -->
-
+    <!--Start Superpowers-->
+    <div class="superpowers">
+        <div class="container">
+            <h1>Your new superpowers</h1>
+            <div>
+                <div>
+                    <h3>Cash offer</h3>
+                    <p>Get an edge over other offers and win the home you love, we'll use our cash to buy on your behalf, with your terms. You can move in as soon as we close with the seller. Later, you'll choose a mortgage lender and buy the home directly from us-for the same price.</p>
+                </div>
+                <div><img src='' alt=''/></div>
+            </div>
+            <div class="">
+                <div class=""><img src='' alt=''/></div>
+                <div class="">
+                    <h3>Guaranteed Offer</h3>
+                    <p>Confidence for you and the seller. Enhance your traditional offer on a home with our promise to buy the home if you can't. we'll also perform pre-inspection and pre-appraisal free of charge.</p>
+                </div>
+            </div>
+            <div class="">
+                <div class="">
+                    <h3>Trade Up</h3>
+                    Unlock the ability to but before you sell. make a cash offer, win your home, and move in. then relax we prep your home with Forevision Crew. if we can't
+                </div>
+                <div class=""><img src="" alt=""/></div>
+            </div>
+        </div>
+    </div>
+    <!--End Superpowers-->
     <!-- Start Contact Us -->
     <div class="contact">
     <div class="overlay"></div>
