some edits in main page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FOREVISION</title>
+        <link rel="icon" href="images/icon-2.png" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap">
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap">
     </head>
 <body>
     <!-- Start Settings Box -->
@@ -74,15 +75,15 @@
         <div class="overlay"></div>
         <div class="container">
             <div class="header-area">
-            <div class="logo"><img src='images/logo.png' alt='logo' /></div>
+            <div class="logo"><a href="#"><img src='images/logo.png' alt='logo' /></a></div>
             <div class="links-container">
                 <ul class="links">
-                <li><a href="#" data-section=".about-us">About</a></li>
-                <li><a href="#" data-section=".skills">Skills</a></li>
-                <li><a href="#" data-section=".gallery">Gallery</a></li>
-                <li><a href="#" data-section=".timeline">Timeline</a></li>
-                <li><a href="#" data-section=".features">Features</a></li>
-                <li><a href="#" data-section=".testimonials">Testimonials</a></li>
+                    <li><a href="#" data-section=".about-us">About</a></li>
+                    <li><a href="#" data-section=".skills">Skills</a></li>
+                    <li><a href="#" data-section=".gallery">Gallery</a></li>
+                    <li><a href="#" data-section=".timeline">Timeline</a></li>
+                    <li><a href="#" data-section=".features">Features</a></li>
+                    <li><a href="#" data-section=".testimonials">Testimonials</a></li>
                 </ul>
                 <button class="toggle-menu">
                 <span></span>
@@ -93,11 +94,25 @@
             </div>
         </div>
         <div class="introduction-text">
-            <h1>We Are <span>Creative</span> Agency</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus odit nihil ullam nesciunt quidem iste</p>
+            <h1>We Are <span>ForeVision</span> Agency</h1>
+            <p id='type'></p>
         </div>
     </div>
     <!-- End Landing Page -->
+    <!--Start Why Us-->
+    <div class="forevision-whyUs">
+        <div class="forevision-whyUs-inner">
+            <h2>Why Choose Us</h2>
+            <p>Forvision is one of the strongest partners in the field of real estate marketing,
+                 where we work to provide the largest package of security because we will bring
+                  you the buyer who appreciates your apartment because we use the latest methods
+                   in marketing to reach the largest number of audiences and have a high ability
+                    to buy your apartment and we provide you with complete safety in dealing with
+                     the customer, even if confused in the pricing We provide you with a market
+                      researcher limit that determines the best price in the market for you</p>
+            </div>
+    </div>
+    <!--End Why Us-->
 
     <!--Start Apartments-->
     <div class="container">
@@ -190,63 +205,38 @@
     <!-- Start Testimonials -->
     <div class="testimonials">
         <div class="container">
-            <h2>Testimonials</h2>
+            <h2>ًWhat Our Customers are Saying</h2>
             <div class="ts-box">
-                <p>Iam very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
                 <div class="person-info">
                     <img src="https://placehold.it/80/DDD" alt="">
                     <h4>Ahmed Mosaad</h4>
                     <p>CEO At Company</p>
                 </div>
+                <h4>I recommend this business to all distressed homeowners 100%.</h4>
+                <p>This company helped me by giving me a very fair cash offer... I recommend this business to all distressed homeowners 100%. Thakful and satisfied!</p>
             </div>
             <div class="ts-box">
-            <p>Iam very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
                 <div class="person-info">
-                    <img src="https://placehold.it/80/EEE" alt="">
-                    <h4>Mohamed Ibrahim</h4>
+                    <img src="https://placehold.it/80/DDD" alt="">
+                    <h4>Ahmed Mosaad</h4>
                     <p>CEO At Company</p>
                 </div>
+                <h4>No one was able to beat what Sundae was offering.</h4>
+                <p>I sold my house to Sundae</p>
             </div>
             <div class="ts-box">
-                <p>Iam very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
                 <div class="person-info">
-                    <img src="https://placehold.it/80/AAA" alt="">
-                    <h4>Sherief Ashraf</h4>
+                    <img src="https://placehold.it/80/DDD" alt="">
+                    <h4>Ahmed Mosaad</h4>
                     <p>CEO At Company</p>
                 </div>
+                <h4>I recommend this business to all distressed homeowners 100%.</h4>
+                <p>This company helped me by giving me a very fair cash offer... I recommend this business to all distressed homeowners 100%. Thakful and satisfied!</p>
             </div>
         </div>
         <div class="clearfix"></div>
     </div>
     <!-- End Testimonials -->
-    <!--Start Superpowers-->
-    <div class="superpowers">
-        <div class="container">
-            <h1>Your new superpowers</h1>
-            <div>
-                <div>
-                    <h3>Cash offer</h3>
-                    <p>Get an edge over other offers and win the home you love, we'll use our cash to buy on your behalf, with your terms. You can move in as soon as we close with the seller. Later, you'll choose a mortgage lender and buy the home directly from us-for the same price.</p>
-                </div>
-                <div><img src='' alt=''/></div>
-            </div>
-            <div class="">
-                <div class=""><img src='' alt=''/></div>
-                <div class="">
-                    <h3>Guaranteed Offer</h3>
-                    <p>Confidence for you and the seller. Enhance your traditional offer on a home with our promise to buy the home if you can't. we'll also perform pre-inspection and pre-appraisal free of charge.</p>
-                </div>
-            </div>
-            <div class="">
-                <div class="">
-                    <h3>Trade Up</h3>
-                    Unlock the ability to but before you sell. make a cash offer, win your home, and move in. then relax we prep your home with Forevision Crew. if we can't
-                </div>
-                <div class=""><img src="" alt=""/></div>
-            </div>
-        </div>
-    </div>
-    <!--End Superpowers-->
     <!-- Start Contact Us -->
     <div class="contact">
     <div class="overlay"></div>
@@ -272,6 +262,7 @@
         <div class="footer">Created With Love By Mohamed Maghraby</div>
     <!-- End Footer -->
 
+<!--
     <div class="forevision-intro intro-1">
         <div class="forevision-intro-overlay">
             <h1 id='type'>
@@ -279,12 +270,7 @@
             </h1>
         </div>
     </div>
-    <div class="forevision-whyUs">
-        <div class="forevision-whyUs-inner">
-            <h2>Why Choose Us</h2>
-            <p>Forvision is the location to find all the different types of real estate from every corner in Egypt gathered in one place, not just apartments, villas, and chalets, as well as in vacant land, agricultural land, factories, stores, garages, etc.</p>
-            </div>
-    </div>
+-->
         
     <div class="forevision-testimonials">
         <div class="containerMargin">
