--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="icon" href="images/icon-2.png" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap">
         <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css" />
     </head>
@@ -338,6 +339,49 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="gtco-testimonials">
+    <div class="owl-carousel owl-carousel1 owl-theme">
+        <div class="apartment">
+            <img src='images/Abdel-Moneim/01.jpg' alt='01'/>
+            <div class="apartment-text">
+                <div class="apartment-price">
+                    price 1,150,000 egp
+                </div>
+                <h6>apartment for sale</h6>
+                <h2>EAST VILLAGE</h2>
+                <ul>
+                    <li>Apartment on Abdel Moneim Street, in a prime location, in front of the post office</li>
+                    <li>An area of ​​144 meters, the 13th floor before the last</li>
+                    <li>3 bedrooms, 2 receptions, 2 bathrooms</li>
+                    <li>Ultra Lux finishing</li>
+                    <li>Complete utilities</li>
+                    <li>a security company</li>
+                    <li>2 elevators</li>
+                </ul>
+                <button>More details</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+    <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js'></script>
     <script src='main.js'></script>
 </body>
 </html>
