--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
         <div class="bullet" data-section=".forevision-whyUs">
             <div class="tooltip">Why Us</div>
         </div>
-        <div class="bullet" data-section=".skills">
-            <div class="tooltip">Our Skills</div>
+        <div class="bullet" data-section=".apartments">
+            <div class="tooltip">Apartments</div>
         </div>
-        <div class="bullet" data-section=".gallery">
-            <div class="tooltip">Our Gallery</div>
-        </div>
-        <div class="bullet" data-section=".timeline">
-            <div class="tooltip">Timeline</div>
-        </div>
-        <div class="bullet" data-section=".features">
-            <div class="tooltip">Features</div>
+        <div class="bullet" data-section=".send-apartment">
+            <div class="tooltip">Put Apartment</div>
         </div>
         <div class="bullet" data-section=".testimonials">
+            <div class="tooltip">Our Customers</div>
+        </div>
+        <div class="bullet" data-section=".contact">
+            <div class="tooltip">Contact Us</div>
+        </div>
+        <div class="bullet" data-section=".timeline">
             <div class="tooltip">Testimonials</div>
         </div>
     </div>
@@ -93,11 +93,11 @@
             <div class="links-container">
                 <ul class="links">
                     <li><a href="#" data-section=".forevision-whyUs">Why Choose Us</a></li>
-                    <li><a href="#" data-section=".skills">Skills</a></li>
-                    <li><a href="#" data-section=".gallery">Gallery</a></li>
-                    <li><a href="#" data-section=".timeline">Timeline</a></li>
-                    <li><a href="#" data-section=".features">Features</a></li>
-                    <li><a href="#" data-section=".testimonials">Testimonials</a></li>
+                    <li><a href="#" data-section=".apartments">Apartments</a></li>
+                    <li><a href="#" data-section=".send-apartment">Put Apartment</a></li>
+                    <li><a href="#" data-section=".testimonials">Our Customers</a></li>
+                    <li><a href="#" data-section=".contact">Contact Us</a></li>
+                    <li><a href="#" data-section=".timeline">Testimonials</a></li>
                 </ul>
                 <button class="toggle-menu">
                 <span></span>
@@ -197,8 +197,8 @@
         </div>
     </div>
     <!--End Apartments-->
-    <!-- Start Contact Us -->
-    <div class="contact">
+    <!-- Start send-apartment -->
+    <div class="contact send-apartment">
         <div class="overlay"></div>
             <div class="container">
                 <h2>Send Your Apartment</h2>
@@ -216,7 +216,7 @@
                 </form>
             </div>
         </div>
-        <!-- End Contact Us -->
+        <!-- End send-apartment -->
     <!-- Start Testimonials -->
     <div class="testimonials">
         <div class="container">
